examples/semantics/errors/error21.grace
fun error21 () : nothing
	fun foo(arr:int[10]): nothing
	{
		puti(8);
	}
	var a:int[10];
{
	foo(a);
}
